[package]
name = "warp_async"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
warp = "0.2"
# Pin version to bypass errors building futures-util crate.
futures = { version = "=0.3.5", features = ["compat"] }
reqwest = "0.9.19"
tokio = { version = "0.2", features = ["rt-core", "macros"] }

juniper_codegen = { git = "https://github.com/graphql-rust/juniper" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }

